build: test deployment